# witivi

./: .gitignore  Makefile.am  autogen.sh  configure.ac  download.sh
data/: Makefile.am  witivi.desktop
html/: Makefile.am  index.html  launch-exopc.html  launch-ideapad.html  launcher.html
html/app/: MediaItem.js  MediaLibrary.js  MediaTimelineItemUI.js  MediaTimelineUI.js  TestSourceItem.js  TransitionItem.js  globals.js  init.js  layout.js  main.js  preview-pane.js  preview-sliders.js  ui.js  utils.js
html/css/: videoeditor.css
html/lib/js/: jquery.flickable-1.0b3.js  jquery.layout-latest.js  model.js  videoeditor.js
