#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([witivi], [0.1], [mateu.batle@collabora.com])
AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_INSTALL

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.
AC_CONFIG_FILES([
    Makefile
    bin/Makefile
    html/Makefile
])

AC_OUTPUT
