pkgdata_DATA = launcher.html index.html

css_DATA = css/*.css
cssdir = $(pkgdatadir)/css

images_DATA = images/*.png 
imagesdir = $(pkgdatadir)/images

libjs_DATA = lib/js/*.js
libjsdir = $(pkgdatadir)/lib/js

jqueryuitheme_DATA = lib/js/jquery.ui/themes/base/*.css
jqueryuithemedir = $(pkgdatadir)/lib/js/jquery.ui/themes/base

jqueryuithemeimages_DATA = lib/js/jquery.ui/themes/base/images/*.png
jqueryuithemeimagesdir = $(pkgdatadir)/lib/js/jquery.ui/themes/base/images

EXTRA_DIST = *.html css images lib 
